--- a/src/components/nodeview/styles/nodeview.css
+++ b/src/components/nodeview/styles/nodeview.css
@@ -1,6 +1,12 @@
 @import './nodedetails.css';
+@import './actions.css';
+@import './nodegraph.css';
 
 .node-view{
-  display: inline-block;
-  /* width: 100%; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
 }
