--- a/src/components/nodeview/styles/nodedetails.css
+++ b/src/components/nodeview/styles/nodedetails.css
@@ -33,7 +33,7 @@
   padding: 12px 7px 2px 7px;
   border: medium solid var(--border-gray);
   border-radius: 10px;
-  margin: 20px 15px;
+  margin: 20px 15px 5px 15px;
   text-align: left;
   display: block;
 }
@@ -48,6 +48,18 @@
   background-color: white;
   border: medium solid var(--border-gray);
   border-radius: 8px;
+}
+
+.info-title-single{
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  position: relative;
+  padding: 5px 5px 3px 5px;
+  border: medium solid var(--border-gray);
+  border-radius: 8px;
+  margin: 5px 23px;
+  text-align: left;
+  display: inline-block;
 }
 
 .node-view-row{
