--- a/src/components/nodeview/styles/nodedetails.css
+++ b/src/components/nodeview/styles/nodedetails.css
@@ -109,3 +109,46 @@
   border: medium solid var(--border-gray);
   border-radius: 10px;
 }
+
+.cfg-dsc-row{
+  display: block;
+  text-align: left;
+  /* border: medium solid var(--border-gray);
+  border-radius: 10px; */
+  margin: 5px 2px;
+  padding: 2px 0;
+}
+
+.cfg-dsc-title{
+  margin: 0 0 0 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  display: inline-block;
+}
+
+.cfg-dsc-value-row{
+  display: block;
+  margin-top: 3px;
+  margin-left: 40px;
+}
+
+.cfg-dsc-value-container{
+  display: inline-block;
+  width: 50%;
+  text-align: left;
+}
+
+.cfg-dsc-key{
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: .85rem;
+  font-weight: bold;
+  /* margin: 0 0 0 40px; */
+}
+
+.cfg-dsc-value{
+  margin: 0 0 0 10px;
+  font-size: .85rem;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+}
