--- a/src/components/header/styles/header.css
+++ b/src/components/header/styles/header.css
@@ -52,7 +52,7 @@
   /* height: 200px; */
   background-color: white;
   padding: 10px;
-  border: medium solid var(--border-gray);
+  border: medium solid var(--border-grey);
   border-radius: 10px;
   /* margin: 2px; */
   /* top: em; */
