--- a/src/components/nodeview/styles/nodegraph.css
+++ b/src/components/nodeview/styles/nodegraph.css
@@ -17,7 +17,7 @@
   font-family: Arial, Helvetica, sans-serif;
   z-index: 1;
   background-color: white;
-  border: medium solid var(--border-gray);
+  border: medium solid var(--border-grey);
   border-radius: 10px;
 }
 
@@ -30,7 +30,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   background-color: white;
-  border: medium solid var(--border-gray);
+  border: medium solid var(--border-grey);
   border-radius: 50px;
   cursor: pointer;
 }
