--- a/src/components/nodeview/styles/react-tabs.css
+++ b/src/components/nodeview/styles/react-tabs.css
@@ -1,28 +1,30 @@
 .react-tabs {
   -webkit-tap-highlight-color: transparent;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .react-tabs__tab-list {
-  border-bottom:medium solid var(--border-gray);
+  border-bottom:medium solid black;
   margin: 0 0 10px;
   padding: 0;
 }
 
 .react-tabs__tab {
   display: inline-block;
-  border: 1px solid transparent;
+  border: medium solid transparent;
   border-bottom: none;
   bottom: -3px;
   position: relative;
   list-style: none;
   padding: 6px 12px;
   cursor: pointer;
+  color: black;
 }
 
 .react-tabs__tab--selected {
   background: #fff;
-  border-color: var(--border-gray);
+  border-color: black;
   border-width: medium;
   color: black;
   border-radius: 6px 6px 0 0;
