--- a/src/components/settings/styles/nodecolor.css
+++ b/src/components/settings/styles/nodecolor.css
@@ -1,18 +1,22 @@
 .node-color-area{
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .color-details-area{
-  display: inline-block;
-  width: 60%;
+  flex-grow: 1;
 }
 
 .area-selector-area{
   display: inline-block;
   text-align: right;
+  margin: 5px;
   margin-top: 25px;
   width: 30%;
+  min-width: 220px;
+  min-height: 220px;
 }
 
 .color-square{
@@ -28,7 +32,7 @@
   left: -5px;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 2;
   border-width: 5px;
   border-style: solid;
   border-radius: 40px;
@@ -41,7 +45,7 @@
   margin: 5px;
   width: 200px;
   height: 200px;
-  z-index: 1;
+  z-index: 2;
   border-radius: 35px;
   border-width: 10px;
   border-style: solid;
@@ -52,7 +56,7 @@
   position: absolute;
   width: 190px;
   height: 190px;
-  z-index: 3;
+  z-index: 4;
   top: 15px;
   margin: 0 15px;
   border-radius: 19px;
@@ -119,7 +123,7 @@
   border-color: transparent;
   border-style: solid;
   border-radius: 25px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .color-square-right-border{
@@ -129,7 +133,7 @@
   border-color: transparent;
   border-style: solid;
   border-radius: 25px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .color-square-bottom-border{
@@ -139,7 +143,7 @@
   border-color: transparent;
   border-style: solid;
   border-radius: 25px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .color-square-left-border{
@@ -149,7 +153,7 @@
   border-color: transparent;
   border-style: solid;
   border-radius: 25px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .color-details-row{
@@ -177,6 +181,19 @@
 
 .color-selection-area{
   display:flex;
+  flex-wrap: nowrap;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: center;
+}
+
+.category-and-dsc{
+  flex-shrink: 0;
+}
+
+.value-options{
+  flex-shrink: 0;
+}
+
+.sketch-picker-container{
+  min-width: 80px;
 }
