--- a/src/components/nodeview/styles/actions.css
+++ b/src/components/nodeview/styles/actions.css
@@ -14,39 +14,36 @@
   display: block;
   font-family: Arial, Helvetica, sans-serif;
   cursor: pointer;
+  text-align: center;
+  background-color: var(--light-grey);
+  box-shadow: 0px 4px 0px 0px var(--grey);
+  transition: all 0.15s ease;
 }
 
 .button:active {
-  transform: translate(0px, 5px);
-  -webkit-transform: translate(0px, 5px);
+  transform: translate(0px, 4px);
+  transition: all 0.1s ease;
+  -webkit-transform: translate(0px, 4px);
   box-shadow: 0px 1px 0px 0px;
+}
+
+div .button:hover {
+  filter: brightness(110%)
 }
 
 div .red {
   background-color: var(--red);
-  box-shadow: 0px 5px 0px 0px var(--dark-red);
-}
-
-div .red:hover {
-  background-color: var(--light-red);
+  box-shadow: 0px 4px 0px 0px var(--dark-red);
 }
 
 div .green {
   background-color: var(--green);
-  box-shadow: 0px 5px 0px 0px var(--dark-green);
-}
-
-div .green:hover {
-  background-color: var(--light-green);
+  box-shadow: 0px 4px 0px 0px var(--dark-green);
 }
 
 div .purple {
   background-color: var(--purple);
-  box-shadow: 0px 5px 0px 0px var(--dark-purple);
-}
-
-div .purple:hover {
-  background-color: var(--light-purple);
+  box-shadow: 0px 4px 0px 0px var(--dark-purple);
 }
 
 #graph-button {
