--- a/src/components/header/styles/header.css
+++ b/src/components/header/styles/header.css
@@ -60,7 +60,7 @@
   /* visibility: hidden;
     opacity: 0; */
   /* transform: scale(1) translateX(0) translateY(6rem); */
-  transition: all 0.2s ease-out;
+  transition: all 0.1s ease;
 }
 
 /* #settings-modal .modal.active {
