--- a/src/components/dashboard/styles/dashboard.css
+++ b/src/components/dashboard/styles/dashboard.css
@@ -1,3 +1,10 @@
 @import './cluster.css';
 @import './legend.css';
 @import './node.css';
+
+.dashboard {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
