--- a/src/components/nodeview/styles/nodegraph.css
+++ b/src/components/nodeview/styles/nodegraph.css
@@ -15,14 +15,14 @@
   top: 2rem;
   /* margin: 1rem 0 0 0; */
   font-family: Arial, Helvetica, sans-serif;
-  z-index: 1;
+  z-index: 101;
   background-color: white;
-  border: medium solid var(--border-gray);
+  border: medium solid var(--border-grey);
   border-radius: 10px;
 }
 
 .close-button{
-  z-index: 1;
+  z-index: 101;
   position: absolute;
   top: -16px;
   left: -20px;
@@ -30,7 +30,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   background-color: white;
-  border: medium solid var(--border-gray);
+  border: medium solid var(--border-grey);
   border-radius: 50px;
   cursor: pointer;
 }
