adding ip address to settings modal

--- a/src/components/header/styles/header.css
+++ b/src/components/header/styles/header.css
@@ -71,6 +71,7 @@
   } */
 
 .settings-row {
+  position: relative;
   display: block;
   text-align: left;
   margin-top: 10px;
@@ -154,4 +155,20 @@
   font-size: 1rem;
   font-weight: bold;
   color: var(--dark-grey)
+}
+
+#ip-apply-button{
+  position: absolute;
+  display: inline-block;
+  margin: 0 0 4px 0;
+  font-size: 1rem;
+  padding: 1px 20px;
+  top:0;
+}
+
+.ip-field{
+  margin: 0 10px;
+  font-size: 1rem;
+  padding: 2px 5px;
+  display: inline-block;
 }
