--- a/src/components/nodeview/styles/actions.css
+++ b/src/components/nodeview/styles/actions.css
@@ -20,6 +20,16 @@
   transition: all 0.15s ease;
 }
 
+.button:disabled{
+  transform: translate(0px, 4px);
+  transition: all 0.1s ease;
+  -webkit-transform: translate(0px, 4px);
+  box-shadow: 0px 1px 0px 0px;
+  cursor: auto;
+  opacity: 0%;
+  visibility: hidden;
+}
+
 .button:active {
   transform: translate(0px, 4px);
   transition: all 0.1s ease;
@@ -29,6 +39,9 @@
 
 div .button:hover {
   filter: brightness(110%)
+}
+div .button:disabled:hover {
+  filter: brightness(100%)
 }
 
 div .red {
